# NuMAD

./: .gitignore  AGENTS.md  README.md  compose.yml  dev.env  justfile  prod-compose.yml
.github/workflows/: build.yml  release-sampo.yml  release.yml
custom_components/: build.sh  package-lock.json  package.json
custom_components/components/MigrationsMapWithRoads/: webpack.config.js
custom_components/components/MigrationsMapWithRoads/src/: index.jsx
custom_components/shared/: webpack.base.js
import/: Dockerfile  README.md  erd.py  main.py  pyproject.toml
import/src/: config.py  data.py  db.py  model.py  parse.py
import/src/numad_import/: cli.py  config.py  model.py  parse.py  util.py
kottster/: kottster-app.json  package-lock.json  prd.Dockerfile
kottster/app/_server/: app.js
kottster/app/pages/coins/: page.json
kottster/app/pages/findSpot/: page.json
kottster/app/pages/identifiers/: page.json
kottster/app/pages/mint/: page.json
kottster/app/pages/rulers/: page.json
kottster/app/pages/testPage/: page.json
kottster/app/schemas/: sidebar.json
ontop/input/: mapping.ttl  ontology.ttl  ontop.properties
sampoConfigs/: Dockerfile  portalConfig.json
sampoConfigs/sampo/assets/: compose-sampo.yml
sampoConfigs/sampo/only_instance_pages/: denominations.json  identifiers.json  localAdminUnits.json  materials.json
sampoConfigs/sampo/search_perspectives/: authorities.json  coins.json  mints.json
sampoConfigs/sampo/sparql_queries/: authorities.js  coins.js  instancePagesQueries.js  mints.js  prefixes.js
sampoConfigs/sampo/translations/: localeEN.json  localeNL.json
(+1 files in other folders)
