[project]
name = "import"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "geoalchemy2>=0.18.1",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.27",
]

[tool.pyright]
typeCheckingMode = "basic"
venv = ".venv"
venvPath = "."
