[project]
name = "import"
version = "0.1.0"
description = "Numad data import"
readme = "README.md"
authors = [{ name = "Miel Peeters", email = "peetersmiel@gmail.com" }]
requires-python = "~=3.13.0"
dependencies = [
    "geoalchemy2>=0.18.1",
    "psycopg2-binary>=2.9.11",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "sqlmodel>=0.0.27",
]

[tool.pyright]
typeCheckingMode = "basic"
venv = ".venv"
venvPath = "."

[dependency-groups]
dev = ["eralchemy[graphviz]>=1.6.0"]
